Bump to java 11